# PyFilterManager

./: .env.example  .gitignore  README.md  audit_security.bat  main.py  pyproject.toml  setup.bat  start.bat
backend/: config.py  settings.py
backend/database/: cli.py  db_manager.py  init_database.py  migrations.py  seed.py
backend/database/alembic/: env.py
backend/database/alembic/versions/: 272693a3facd_schema_iniziale.py  b8e4f1a92c3d_aggiunge_frequenza_intervento_filtri.py  c4a7d2e81f90_rinomina_numero_filtri_in_quantita_filtri.py  d5b8c3f04a21_completa_rinomina_quantita_filtri.py  e6c9a4b72d10_aggiunge_preavviso_personalizzato_filtri.py
backend/factories/: __init__.py  factories.py  helpers.py  session.py
backend/i18n/: __init__.py  dates.py  locale.py  translations.py
backend/i18n/locales/: messages.pot
backend/i18n/locales/en/LC_MESSAGES/: filtri.mo  filtri.po  messages.mo  messages.po
backend/i18n/locales/it/LC_MESSAGES/: filtri.mo  filtri.po  messages.mo  messages.po
backend/models/: __init__.py  filtro.py  impianto.py  intervento.py  linea.py  quadro_elettrico.py  reparto.py  sede.py
backend/schemas/: __init__.py  app_preferences.py  filtri.py  frequenza.py  hierarchy.py  settings.py  stato_filtro.py
backend/services/: app_preferences_service.py  app_theme_service.py  filtri_service.py  hierarchy_crud_service.py  hierarchy_service.py  intervento_crud_service.py  preavviso_filtro_service.py  stato_filtro_service.py
frontend/components/: date_input.py  filtri_grid_panel.py  filtro_card.py  frequenza_input.py  hierarchy_dialogs.py  hierarchy_tree.py  intervento_dialog.py  multi_select_filter_button.py  preavviso_advanced_section.py  quadro_detail_panel.py  scoped_search_line_edit.py  section_divider.py  select_setting_card.py  theme_aware_styles.py
frontend/views/: dashboard_view.py  filtri_view.py  home_view.py  report_view.py  settings_view.py
